# testcc

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: base-policy.yaml  runtime-policy.yaml  signatures.yaml
config/environments/: dev.yaml  production.yaml  staging.yaml
docs/: ARCHITECTURE.md  INTEGRATION-RESEARCH.md  LEARNINGS.md
openclaw-skill/: SKILL.md  exec-approvals.json  install.sh  safeskill-exec.sh  safeskill-hook.js  safeskill-inject.md  safeskill-trap.sh  safeskill-wrapper.sh
openclaw-skill/safeskill-hook/: HOOK.md  handler.ts
safeskill/: __init__.py  agent.py  cli.py  evaluator.py  logger.py  models.py  policy.py  server.py  setup.py  signatures.py  trust.py  updater.py  watcher.py
setup/: com.safeskill.agent.plist  com.safeskill.updater.plist  finalize-install.sh  fix-siem-config.sh  install-linux.sh  install-macos.sh  install.sh  jamf-install.sh  monitor-audit.sh  safeskill-agent.service  safeskill-updater.service  safeskill-updater.timer  safeskill.service  start-linux.sh  start.sh  uninstall-linux.sh  uninstall-macos.sh  uninstall-openclaw.sh  update.sh
setup/linux/: fix-siem-config.sh  install.sh  monitor-audit.sh  safeskill.service  start.sh
tests/: test_e2e.sh  test_evaluator.py  test_policy.py  test_signatures.py  test_trust.py
